tools/jruby-1.7.11/lib/ruby/1.9/rdoc/markdown/literals_1_8.kpeg
%% name = RDoc::Markdown::Literals

%% header {
# :markup: markdown

##
# Provides Literals appropriate for your ruby version.
#--
# This set of literals is for ruby 1.8 regular expressions.
}

Alphanumeric      = /[0-9A-Za-z\200-\377]/
AlphanumericAscii = /[A-Za-z0-9]/
BOM               = "\357\273\277"
Newline           = /\n|\r\n?/
NonAlphanumeric   = /[\000-\057\072-\100\133-\140\173-\177]/
Spacechar         = / |\t/
